--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,18 @@ p {
   font-family: Lato;
 }
 
-.right-margin {
-  margin-right : 5px;
+.box {
+  width: 100px;
+  height: 100px;
+  padding: 20px 40px;
+  margin: 10px;
+  border: 3px solid black;
+}
+
+.red-border {
+  border: 2px solid red;
+}
+
+.yellow-background {
+  background: yellow;
 }
