--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <hello name="{{name}}"> </hello>
 
-<button (click)="currentProgress = currentProgress+1"> Increase Progress</button>
-<progress-bar [progress]="currentProgress" [progressColor]="'dodgerblue'"></progress-bar>
+<app-author-list></app-author-list>
