--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <hello name="{{name}}"> </hello>
 
-<app-author-list></app-author-list>
+<input type="text" [(ngModel)]="name">
+
+<toggle [(checked)]="checked"></toggle>
