--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 
 <input type="text" [(ngModel)]="name">
 
-<toggle [(checked)]="checked"></toggle>
+<app-toggle [(checked)]="checked"></app-toggle>
